// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A bulleted List 1`] = `
.c0 {
  font-family: "Roboto","Noto Sans JP","Noto Sans CJK KR","Noto Sans Arabic UI","Noto Sans Devanagari UI","Noto Sans Hebrew","Noto Sans Thai UI","Helvetica","Arial",sans-serif;
  list-style-type: disc;
  padding-left: 1rem;
}

.c1 {
  font-family: "Roboto","Noto Sans JP","Noto Sans CJK KR","Noto Sans Arabic UI","Noto Sans Devanagari UI","Noto Sans Hebrew","Noto Sans Thai UI","Helvetica","Arial",sans-serif;
  margin-bottom: 0.25rem;
}

<ul
  className="c0"
  type="bullet"
>
  <li
    className="c1"
  >
    🥑
  </li>
  <li
    className="c1"
  >
    🍕
  </li>
  <li
    className="c1"
  >
    🥨
  </li>
</ul>
`;

exports[`A default List, should be a ul 1`] = `
.c0 {
  font-family: "Roboto","Noto Sans JP","Noto Sans CJK KR","Noto Sans Arabic UI","Noto Sans Devanagari UI","Noto Sans Hebrew","Noto Sans Thai UI","Helvetica","Arial",sans-serif;
  list-style-type: none;
}

.c1 {
  font-family: "Roboto","Noto Sans JP","Noto Sans CJK KR","Noto Sans Arabic UI","Noto Sans Devanagari UI","Noto Sans Hebrew","Noto Sans Thai UI","Helvetica","Arial",sans-serif;
  margin-bottom: 0.25rem;
}

<ul
  className="c0"
  type="none"
>
  <li
    className="c1"
  >
    🥑
  </li>
  <li
    className="c1"
  >
    🍕
  </li>
  <li
    className="c1"
  >
    🥨
  </li>
</ul>
`;

exports[`A numerically ordered List 1`] = `
.c0 {
  font-family: "Roboto","Noto Sans JP","Noto Sans CJK KR","Noto Sans Arabic UI","Noto Sans Devanagari UI","Noto Sans Hebrew","Noto Sans Thai UI","Helvetica","Arial",sans-serif;
  list-style-type: decimal;
  padding-left: 1rem;
}

.c1 {
  font-family: "Roboto","Noto Sans JP","Noto Sans CJK KR","Noto Sans Arabic UI","Noto Sans Devanagari UI","Noto Sans Hebrew","Noto Sans Thai UI","Helvetica","Arial",sans-serif;
  margin-bottom: 0.25rem;
}

<ol
  className="c0"
  type="number"
>
  <li
    className="c1"
  >
    🥑
  </li>
  <li
    className="c1"
  >
    🍕
  </li>
  <li
    className="c1"
  >
    🥨
  </li>
</ol>
`;

exports[`A numerically ordered List marked as nomarker 1`] = `
.c0 {
  font-family: "Roboto","Noto Sans JP","Noto Sans CJK KR","Noto Sans Arabic UI","Noto Sans Devanagari UI","Noto Sans Hebrew","Noto Sans Thai UI","Helvetica","Arial",sans-serif;
  list-style-type: none;
}

.c1 {
  font-family: "Roboto","Noto Sans JP","Noto Sans CJK KR","Noto Sans Arabic UI","Noto Sans Devanagari UI","Noto Sans Hebrew","Noto Sans Thai UI","Helvetica","Arial",sans-serif;
  margin-bottom: 0.25rem;
}

<ol
  className="c0"
  type="none"
>
  <li
    className="c1"
  >
    🥑
  </li>
  <li
    className="c1"
  >
    🍕
  </li>
  <li
    className="c1"
  >
    🥨
  </li>
</ol>
`;
